// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesSummary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    € 1,95
  </h1>
</div>
`;

exports[`Should render ExpensesSummary with two expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    € 1.096,95
  </h1>
</div>
`;
